--- a/apps/templates/authentication/login.html
+++ b/apps/templates/authentication/login.html
@@ -23,4 +23,6 @@ Accounts Login
     <input type="password" name="password" id="id_password">
     <input type="submit" value="Login">
 </form>
+
+<a href="{% url "signup" %}">no tengo cuenta, Registrarme</a>
 {% endblock content %}
