--- a/apps/templates/dashboard/index.html
+++ b/apps/templates/dashboard/index.html
@@ -16,6 +16,8 @@ Dashboard Home
         {% endfor %}
     {% endif %}
 
+    <a href="{% url "profile" slug=user.username %}">Perfil</a>
+
     {% if user.is_authenticated %}
         <a href="{% url "logout" %}">Cerrar Sesión</a>
     {% endif %}
