authentication:profile edit

--- a/apps/templates/profile/edit.html
+++ b/apps/templates/profile/edit.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-Editar perfil . Accounts
+@{{user.username}} - Editar perfil
 {% endblock title %}
 
 {% block content %}
