--- a/apps/templates/dashboard/index.html
+++ b/apps/templates/dashboard/index.html
@@ -23,4 +23,8 @@
     {% if user.is_authenticated %}
         <a href="{% url "logout" %}">Cerrar Sesión</a>
     {% endif %}
+
+    {% for repo in repositories %}
+        <a href="{% url "repository" slug_user=user slug_repo=repo.slug %}">{{user}}/{{repo.title}}</a>
+    {% endfor %}
 {% endblock content %}
