--- a/apps/templates/dashboard/index.html
+++ b/apps/templates/dashboard/index.html
@@ -16,15 +16,23 @@
         {% endfor %}
     {% endif %}
 
-    <a href="{% url "dashboard" %}">Inicio</a>
-    <a href="{% url "repository_new" %}">New</a>
-    <a href="{% url "profile" slug=user.username %}">Perfil</a>
+    <div>
+        <a href="{% url "dashboard" %}">Inicio</a>
+        <a href="{% url "profile" slug=user.username %}">Perfil</a>
 
-    {% if user.is_authenticated %}
-        <a href="{% url "logout" %}">Cerrar Sesión</a>
-    {% endif %}
-
-    {% for repo in repositories %}
-        <a href="{% url "repository" slug_user=user slug_repo=repo.slug %}">{{user}}/{{repo.title}}</a>
-    {% endfor %}
+        {% if user.is_authenticated %}
+            <a href="{% url "logout" %}">Cerrar Sesión</a>
+        {% endif %}
+    </div>
+    
+    <div>
+        <div>
+            <h2>Top repositorios</h2>
+            <a href="{% url "repository_new" %}">New</a>
+        </div>
+        
+        {% for repo in repositories %}
+            <a href="{% url "repository" slug=repo.slug %}">{{user}}/{{repo.title}}</a>
+        {% endfor %}
+    </div>
 {% endblock content %}
