--- a/apps/templates/dashboard/index.html
+++ b/apps/templates/dashboard/index.html
@@ -25,14 +25,37 @@
         {% endif %}
     </div>
     
-    <div>
-        <div class="d-flex">
-            <h2 class="h2">Top repositorios</h2>
-            <a href="{% url "repository_new" %}" class="btn btn-success btn-sm">New</a>
-        </div>
+    <div class="w-25">
 
-        {% for repo in repositories %}
-            <a href="{% url "repository" slug=repo.slug %}">{{user}}/{{repo.title}}</a>
-        {% endfor %}
+        {% if repositories %}
+            <div class="d-flex justify-content-between">
+                <h2 class="h4">Top repositorios</h2>
+                <a href="{% url "repository_new" %}" class="btn btn-success btn-sm">New</a>
+            </div>
+            {% for repo in repositories %}
+                <input class="form-control form-control-sm mt-2 mb-3" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
+
+                <a href="{% url "repository" slug=repo.slug %}" class="icon-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard" viewBox="0 0 16 16">
+                        <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1z"/>
+                        <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0z"/>
+                    </svg>    
+                    {{user}}/{{repo.title}}
+                </a>
+            {% endfor %}
+        {% else %}
+        <div class="p-2">
+            <p class="form-text m-0">Crea tu primer proyecto</p>
+            <small class="">
+                Un repositorio, o repo, es un tipo de almacenamiento digital centralizado que los 
+                desarrolladores utilizan para realizar y administrar cambios 
+                en el código fuente de una aplicación.
+            </small>
+            <div class="w-50 mt-3">
+                <a href="{% url "repository_new" %}" class="btn btn-success btn-sm">Crea repositorio</a>
+            </div>
+        </div>
+        {% endif %}
+
     </div>
 {% endblock content %}
