--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -7,8 +7,8 @@ Home Index
 {% endblock title %}
 
 {% block content %}
+
+{% include "includes/navbar.html" %}
 <h1>Index</h1>
 
-<a href="{% url "login" %}">Sing in</a>
-<a href="{% url "signup" %}">Signup</a>
 {% endblock content %}
