--- a/apps/templates/includes/navbar.html
+++ b/apps/templates/includes/navbar.html
@@ -27,10 +27,16 @@
             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
           </li>
         </ul>
+        {% if user.is_authenticated %}
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+        {% else %}
+        <a href="{% url "login" %}" class="btn btn-outline-dark">Sing in</a>
+        <a href="{% url "signup" %}" class="btn">Signup</a>
+        {% endif %}
+
       </div>
     </div>
 </nav>
