--- a/apps/templates/authentication/signup.html
+++ b/apps/templates/authentication/signup.html
@@ -8,11 +8,95 @@ Register
 
 
 {% block content %}
-<h1>Register</h1>
 
-<form method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Guardar">
-</form>
+<div class="d-flex justify-content-center align-middled mt-5">
+    <div class="card shadow p-3 mb-5 rounded bg-body" style="width: 35rem;">
+        <div class="card-head ">
+            <h1 class="mx-3 h2"><strong>registro</strong></h1>
+        </div>
+        <div class="card-body ">
+            <form method="POST">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col-sm">
+                        <div class="input-group has-validation mb-2">
+                            <div class="form-floating is-invalid">
+                                {{ form.first_name }}
+                                <label for="floatingInputGroup2">Primer nombre</label>
+                            </div>
+                            <div class="invalid-feedback">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="input-group has-validation mb-2">
+                            <div class="form-floating is-invalid">
+                                {{ form.second_name }}
+                                <label for="floatingInputGroup2">Segundo nombre</label>
+                            </div>
+                            <div class="invalid-feedback">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="input-group has-validation mb-2">
+                    <div class="form-floating is-invalid">
+                        {{ form.last_name }}
+                        <label for="floatingInputGroup2">Apellidos</label>
+                    </div>
+                    <div class="invalid-feedback">
+                    </div>
+                </div>
+                <div class="input-group has-validation mb-2">
+                    <div class="form-floating is-invalid">
+                        {{ form.username }}
+                        <label for="floatingInputGroup2">Username</label>
+                    </div>
+                    <div class="invalid-feedback">
+                    </div>
+                </div>
+                <div class="input-group has-validation mb-2">
+                    <span class="input-group-text">@</span>
+                    <div class="form-floating is-invalid">
+                        {{ form.email }}
+                        <label for="floatingInputGroup2">Email</label>
+                    </div>
+                    <div class="invalid-feedback">
+                    </div>
+                </div>
+                <div class="input-group has-validation mb-2">
+                    <span class="input-group-text">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-key" viewBox="0 0 16 16">
+                            <path d="M0 8a4 4 0 0 1 7.465-2H14a.5.5 0 0 1 .354.146l1.5 1.5a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0L13 9.207l-.646.647a.5.5 0 0 1-.708 0L11 9.207l-.646.647a.5.5 0 0 1-.708 0L9 9.207l-.646.647A.5.5 0 0 1 8 10h-.535A4 4 0 0 1 0 8m4-3a3 3 0 1 0 2.712 4.285A.5.5 0 0 1 7.163 9h.63l.853-.854a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.793-.793-1-1h-6.63a.5.5 0 0 1-.451-.285A3 3 0 0 0 4 5"/>
+                            <path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+                        </svg>
+                    </span>
+                    <div class="form-floating is-invalid">
+                        {{ form.password1 }}
+                        <label for="floatingPassword">Password</label>          
+                    </div>
+                    <div class="invalid-feedback">
+                    </div>
+                </div>
+                <div class="input-group has-validation mb-2">
+                    <span class="input-group-text">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-key" viewBox="0 0 16 16">
+                            <path d="M0 8a4 4 0 0 1 7.465-2H14a.5.5 0 0 1 .354.146l1.5 1.5a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0L13 9.207l-.646.647a.5.5 0 0 1-.708 0L11 9.207l-.646.647a.5.5 0 0 1-.708 0L9 9.207l-.646.647A.5.5 0 0 1 8 10h-.535A4 4 0 0 1 0 8m4-3a3 3 0 1 0 2.712 4.285A.5.5 0 0 1 7.163 9h.63l.853-.854a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.793-.793-1-1h-6.63a.5.5 0 0 1-.451-.285A3 3 0 0 0 4 5"/>
+                            <path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+                        </svg>
+                    </span>
+                    <div class="form-floating is-invalid">
+                        {{ form.password2 }}
+                        <label for="floatingPassword">Comfirmation password</label>          
+                    </div>
+                    <div class="invalid-feedback">
+                    </div>
+                </div>
+                <div class="d-grid gap-2">
+                    <input type="submit" value="Guardar registro" class="btn btn-outline-success btn-lg">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock content %}
