--- a/apps/templates/base/index.html
+++ b/apps/templates/base/index.html
@@ -6,15 +6,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-        {% block title %}
-        Bootstrap demo
-        {% endblock title %}
+      {% block title %}
+      Bootstrap demo
+      {% endblock title %}
     </title>
 
     {% block cdn %}
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js" integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     {% endblock cdn %}
+
 
     {% block css %}{% endblock css %}
 
@@ -25,10 +26,13 @@
     {% include "includes/navbar.html" %}
     {% include "includes/sidebar.html" %}
     
+    <div class="container">
     {% block content %}
     <h1>Hello, world!</h1>
     
     {% endblock content %}
+    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     {% block javascript %}{% endblock javascript %}
