--- a/apps/templates/dashboard/index.html
+++ b/apps/templates/dashboard/index.html
@@ -25,37 +25,49 @@
         {% endif %}
     </div>
     
-    <div class="w-25">
-
-        {% if repositories %}
-            <div class="d-flex justify-content-between">
-                <h2 class="h4">Top repositorios</h2>
-                <a href="{% url "repository_new" %}" class="btn btn-success btn-sm">New</a>
-            </div>
-            {% for repo in repositories %}
-                <input class="form-control form-control-sm mt-2 mb-3" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
-
-                <a href="{% url "repository" slug=repo.slug %}" class="icon-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard" viewBox="0 0 16 16">
-                        <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1z"/>
-                        <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0z"/>
-                    </svg>    
-                    {{user}}/{{repo.title}}
-                </a>
-            {% endfor %}
-        {% else %}
-        <div class="p-2">
-            <p class="form-text m-0">Crea tu primer proyecto</p>
-            <small class="">
-                Un repositorio, o repo, es un tipo de almacenamiento digital centralizado que los 
-                desarrolladores utilizan para realizar y administrar cambios 
-                en el código fuente de una aplicación.
-            </small>
-            <div class="w-50 mt-3">
-                <a href="{% url "repository_new" %}" class="btn btn-success btn-sm">Crea repositorio</a>
-            </div>
+    <div class="w-25 card">
+        <div class="card-head p-2" style="height: 100%;">
+            <a class="icon-link" href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-book" viewBox="0 0 16 16">
+                    <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783"/>
+                </svg>
+                <div class="h4">Icon link</div>
+            </a>
+            <p>Learn how to get started with our product.</p>
         </div>
-        {% endif %}
+        <div class="card-body">
+            {% if repositories %}
+                <div class="d-flex justify-content-between">
+                    <h2 class="h4">Top repositorios</h2>
+                    <a href="{% url "repository_new" %}" class="btn btn-success btn-sm">New</a>
+                </div>
+                {% for repo in repositories %}
+                    <input class="form-control form-control-sm mt-2 mb-3" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
 
+                    <a href="{% url "repository" slug=repo.slug %}" class="icon-link">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard" viewBox="0 0 16 16">
+                            <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1z"/>
+                            <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0z"/>
+                        </svg>    
+                        {{user}}/{{repo.title}}
+                    </a>
+                {% endfor %}
+            {% else %}
+            <div class="p-2">
+                <p class="form-text m-0">Crea tu primer proyecto</p>
+                <small class="">
+                    Un repositorio, o repo, es un tipo de almacenamiento digital centralizado que los 
+                    desarrolladores utilizan para realizar y administrar cambios 
+                    en el código fuente de una aplicación.
+                </small>
+                <div class="w-50 mt-3">
+                    <a href="{% url "repository_new" %}" class="btn btn-success btn-sm">Crea repositorio</a>
+                </div>
+            </div>
+            {% endif %}
+
+        </div>
     </div>
+
+
 {% endblock content %}
