--- a/apps/templates/repository/detail.html
+++ b/apps/templates/repository/detail.html
@@ -7,12 +7,12 @@
 {% endblock title %}
 
 {% block content %}
-<h1>{{software.title}}</h1>
+
 <p><hr class="dropdown-divider"></p>
 
 <div class="row">
     <div class="col-4">
-        <div class="list-group">
+        <div class="list-group h-100">
             <a href="#" class="list-group-item list-group-item-action bg-secondary" aria-current="true">
               The current link item
             </a>
@@ -63,16 +63,69 @@
         </div>
     </div>
     <div class="col-8">
-      <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
-        <h4 id="list-item-1">Item 1</h4>
-        <p>{% lorem 1 b %}</p>
-        <h4 id="list-item-2">Item 2</h4>
-        <p>{% lorem 3 p %}</p>
-        <h4 id="list-item-3">Item 3</h4>
-        <p>{% lorem 5 w random %}</p>
-        <h4 id="list-item-4">Item 4</h4>
-        <p>{% lorem 2 b random %}</p>
-      </div>
+        <h1 class="h1 mb-3 text-center fw-bold">{{software.title.upper}}</h1>
+        <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
+            <h4 id="list-item-1">Descripción del software</h4>
+            <p>Bienvenido a la documentación de <strong>{{software.title.capitalize}}</strong>. Aquí encontrará toda la información que necesita para empezar a utilizar nuestro producto.</p>
+            <h4 id="list-item-2">Introducción</h4>
+            <p class="text-xxl-end">
+                Bienvenido/a a la descripción del producto de software <strong>{{software.title.capitalize}}</strong>. Esta guía tiene como objetivo proporcionar una visión general detallada de las características, funcionalidades y beneficios que ofrece nuestro software <strong>{{software.title.capitalize}}</strong>.
+                En un mundo cada vez más digitalizado, la demanda de soluciones eficientes y fiables para abordar una amplia gama de necesidades esenciales en el ámbito profesional y personal ha crecido exponencialmente. Con este fin, nuestro equipo se enorgullece en presentar <strong>{{software.title.capitalize}}</strong>, una herramienta diseñada para [describir el propósito principal del software, por ejemplo, aumentar la productividad, gestionar datos, optimizar procesos, etc.].
+                Esta introducción proporcionará una visión general de alto nivel del software, su propósito y su audiencia prevista. A lo largo de este documento, exploraremos en detalle las características clave, los requisitos del usuario, la instalación y configuración, así como otros aspectos relevantes para garantizar una experiencia óptima para nuestros usuarios.
+
+                A medida que avanzamos, invitamos a los lectores a sumergirse en el mundo de <strong>{{software.title.capitalize}}</strong>, descubriendo cómo nuestras soluciones pueden satisfacer sus necesidades específicas y contribuir al logro de sus objetivos tanto profesionales como personales.
+            </p>
+            <h4 id="list-item-3">Resumen ejecutivo</h4>
+            <p>
+                El software [Nombre del Software] es una solución innovadora diseñada para [describir el propósito principal del software]. Con una interfaz intuitiva y potentes características, [Nombre del Software] está diseñado para satisfacer las necesidades de [audiencia objetivo, por ejemplo, profesionales de negocios, equipos de desarrollo, estudiantes, etc.].
+
+                Características Clave:
+
+                    [Lista de características destacadas del software]
+                    [Otra característica importante]
+                    [Otra característica importante]
+
+                Beneficios Principales:
+
+                Aumento de la eficiencia y productividad.
+                Mejora en la gestión de [área específica, por ejemplo, datos, proyectos, comunicación, etc.].
+                Reducción de costos y recursos.
+
+                Audiencia Objetivo:
+                [Descripción de la audiencia a la que se dirige el software, incluyendo sus necesidades y desafíos específicos.]
+            </p>
+            <h4 id="list-item-4" >Información General</h4>
+            <table class="table border" style="width:19rem;">
+                <tbody>
+                  <tr>
+                    <th scope="row">Titúlo de Software</th>
+                    <td>Mark</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Tipo de programa</th>
+                    <td>Jacob</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Versión actual.</th>
+                    <td colspan="2">v1.0</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Licencia</th>
+                    <td colspan="2">{{ software.license }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Fecha de publicación o última actualización.</th>
+                    <td colspan="2">{{ software.date_created }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Nombre de la empresa o equipo desarrollador.</th>
+                    <td colspan="2">{{ software.date_created }}</td>
+                  </tr>
+                </tbody>
+              </table>
+            <h4 id="list-item-4">Información General</h4>
+            <p>{% lorem 2 b random %}</p>
+        </div>
     </div>
   </div>
 
