--- a/apps/templates/profile/edit.html
+++ b/apps/templates/profile/edit.html
@@ -7,30 +7,59 @@
 {% endblock title %}
 
 {% block content %}
-<h1>Editar perfil</h1>
+<div style="width:35rem;">
+    <h1 class="h3 fw-bold m-0">Perfil</h1>
+    <p class="text-secondary mt-0">actualiza tu información de perfil</p>
 
 
-
-<form method="POST" actions="{% url "profile_edit" slug=user.username %}">
-    {% csrf_token %}
-    {{form}}
-    <div class="form-check">
-        {{ form.gender }}
-    </div>
-      
-    <label class="card rounded" style="width:10rem;border:2px dashed #cacaca;cursor:pointer;">
-        <div class="card-body d-flex justify-content-center flex-column align-items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-person-bounding-box text-secondary" viewBox="0 0 16 16">
-                <path d="M1.5 1a.5.5 0 0 0-.5.5v3a.5.5 0 0 1-1 0v-3A1.5 1.5 0 0 1 1.5 0h3a.5.5 0 0 1 0 1zM11 .5a.5.5 0 0 1 .5-.5h3A1.5 1.5 0 0 1 16 1.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 1-.5-.5M.5 11a.5.5 0 0 1 .5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 1 0 1h-3A1.5 1.5 0 0 1 0 14.5v-3a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v3a1.5 1.5 0 0 1-1.5 1.5h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 1 .5-.5"/>
-                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-            </svg>
-            <div class="text-center">
-                <span class="h7">Agregar foto de perfil</span>
+    <form method="POST" actions="{% url "profile_edit" slug=user.username %}">
+        {% csrf_token %}
+        
+        <div class="row">
+            <div class="col-sm-4">
+                <label class="card rounded" style="width:10rem;border:2px dashed #cacaca;cursor:pointer;">
+                    <div class="card-body d-flex justify-content-center flex-column align-items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-person-bounding-box text-secondary" viewBox="0 0 16 16">
+                        <path d="M1.5 1a.5.5 0 0 0-.5.5v3a.5.5 0 0 1-1 0v-3A1.5 1.5 0 0 1 1.5 0h3a.5.5 0 0 1 0 1zM11 .5a.5.5 0 0 1 .5-.5h3A1.5 1.5 0 0 1 16 1.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 1-.5-.5M.5 11a.5.5 0 0 1 .5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 1 0 1h-3A1.5 1.5 0 0 1 0 14.5v-3a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v3a1.5 1.5 0 0 1-1.5 1.5h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 1 .5-.5"/>
+                        <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                    </svg>
+                    <div class="text-center">
+                        <span class="h7">Agregar foto de perfil</span>
+                    </div>
+                    {{ form.avatar }}
+                    </div>
+                </label>
             </div>
-            {{ form.avatar }}
+            <div class="col-sm">  
+                <div> 
+                    <h1 class="h4">¿Cuál es tu Universidad?</h1>
+                    {{ form.institution }}
+                </div>
+                <div>
+                    <h1 class="h4">Elige tu profesión</h1>
+                    {{ form.profession_career }}
+                </div>
+                <h1 class="h4">¿Cuál es tu ocupación?</h1>
+                <div class="form-check mb-3">
+                    <input type="radio" class="btn-check" name="occupation" id="option5" autocomplete="off" checked>
+                    <label class="btn" for="option5">Profesor</label>
+                    
+                    <input type="radio" class="btn-check" name="occupation" id="option6" autocomplete="off">
+                    <label class="btn" for="option6">Estudiante</label>
+                </div>
+                <h1 class="h4">sexo</h1>
+                <div class="form-check mb-3">
+                    <input type="radio" class="btn-check" name="gender" id="id_gender_1" autocomplete="off" checked>
+                    <label class="btn" for="id_gender_1">Hombre</label>
+                    
+                    <input type="radio" class="btn-check" name="gender" id="id_gender_2" autocomplete="off">
+                    <label class="btn" for="id_gender_2">Mujer</label>
+                        
+                </div>
+            </div>
+        <div class="d-flex justify-content-end">
+            <button type="submit" class="btn btn-outline-success btn-sm px-5 py-2">Guardar</button>
         </div>
-    </label>
-    <button type="submit" class="btn btn-primary btn-lg">Guardar</button>
-</form>
-
+    </form>
+</div>
 {% endblock content %}
