--- a/apps/templates/profile/edit.html
+++ b/apps/templates/profile/edit.html
@@ -41,7 +41,7 @@
                 </div>
                 <h1 class="h4">¿Cuál es tu ocupación?</h1>
                 <div class="form-check mb-3">
-                    <input type="radio" class="btn-check" name="occupation" id="option5" autocomplete="off" checked>
+                    <input type="radio" class="btn-check" name="occupation" id="option5" autocomplete="off" checcked>
                     <label class="btn" for="option5">Profesor</label>
                     
                     <input type="radio" class="btn-check" name="occupation" id="option6" autocomplete="off">
