--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -18,7 +18,7 @@ name app - Home
             La solución moderna para gestionar sus documentos. Almacene, colabore y realice un seguimiento de los cambios de forma segura en toda su organización.
         </div>
         <div class="mt-3">
-            <button type="button" class="btn btn-dark">Empezar</button>
+            <a href="{% url "login" %}" class="btn btn-dark">Empezar</a>
             <button type="button" class="btn btn-light">Aprender más</button>
         </div>
     </div>
