--- a/apps/templates/base/index.html
+++ b/apps/templates/base/index.html
@@ -2,39 +2,54 @@
 
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>
-      {% block title %}
-      Bootstrap demo
-      {% endblock title %}
-    </title>
 
-    {% block cdn %}
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>
+    {% block title %}
+    Bootstrap demo
+    {% endblock title %}
+  </title>
+
+  {% block cdn %}
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js" integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    {% endblock cdn %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js"
+      integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer">
+    </script>
+  {% endblock cdn %}
 
 
-    {% block css %}{% endblock css %}
+  {% block css %}{% endblock css %}
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
 
-    {% include "includes/navbar.html" %}
-    {% include "includes/sidebar.html" %}
-    
-    <div class="container">
-    {% block content %}
-    <h1>Hello, world!</h1>
-    
-    {% endblock content %}
+<body style="height: 100vh;overflow:scroll;">
+
+  <div class="row">
+    <div class="col-sm-3 mx-0">
+      {% include "includes/sidebar.html" %}
     </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <div class="col-sm-9">
+      {% include "includes/navbar.html" %}
+      
+      <div style="height: 100vh;overflow:scroll;">
+        {% block content %}{% endblock content %}
+      </div>
+    </div>
+  </div>
 
-    {% block javascript %}{% endblock javascript %}
-  </body>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous">
+  </script>
+
+  {% block javascript %}{% endblock javascript %}
+
+</body>
 </html>
