new model academica

--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -6,10 +6,11 @@
 name app - Home
 {% endblock title %}
 
+
+
 {% block content %}
 
 {% include "includes/navbar.html" %}
-
 <div class="container mt-5">
     <div class="d-flex flex-column justify-content-center">
         <p class="text-secondary mb-0 badge text-center" >Gestor de documentos</p>
@@ -44,3 +45,5 @@ name app - Home
 </div>
 
 {% endblock content %}
+
+{% block javascript %}{% endblock javascript %}
