--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -13,7 +13,7 @@
             {% if repositories %}
                 <div class="d-flex justify-content-between">
                     <h2 class="h4">Top repositorios</h2>
-                    <a href=" class="btn btn-success btn-sm">New</a>
+                    <a href="" class="btn btn-success btn-sm">New</a>
                 </div>
                 {% for repo in repositories %}
                     <input class="form-control form-control-sm mt-2 mb-3" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
@@ -50,11 +50,7 @@
                 Cerrar Sesión
             </a>
         </div>
-        <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
+
     </div>
 
 </div>
