--- a/apps/templates/authentication/signup.html
+++ b/apps/templates/authentication/signup.html
@@ -12,7 +12,18 @@ Register
 
 
 {% block content %}
-<div class="d-flex justify-content-center align-middled mt-5">
+<div class="position-relative">
+    <div class="position-absolute top-5 end-8">
+        <a class="icon-link icon-link-hover" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);" href={% url "index" %}>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+            </svg>
+            Atras
+        </a>
+    </div>
+</div>
+<div class="d-flex justify-content-center mt-3">
+
     <div class="card shadow p-3 mb-5 rounded bg-body" style="width: 35rem;">
         <div class="card-head ">
             <h1 class="mx-3 h2"><strong>registro</strong></h1>
