--- a/apps/templates/dashboard/index.html
+++ b/apps/templates/dashboard/index.html
@@ -9,36 +9,42 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-        <h1 class="h2 fw-bold">Hola, {{ user.first_name }}</h1>
-        <p class="h4 fw-light">¡Te damos la bienvenidad a APPNNN!</p>
+        <h1 class="h1 fw-bold">Hola, {{ user.first_name }}</h1>
+        <p class="h5 fw-light">¡Te damos la bienvenidad a APPNNN!</p>
 
-        {% block content_2 %}
-            <p class="h4 text-secondary mt-5">Primeros pasos</p>
-
-            <div class="mt-2 w-75 p-4">
-                {% if user.profile.occupation is None or user.profile.profession_career is None or user.profile.institution is None %}
-                    <div class="form-check mb-3">
-                        <a href="{% url "profession" slug=user.profile.slug %}">
-                            <input class="form-check-input" type="checkbox" value="">
-                            <label class="form-check-label" for="flexCheckDefault">
-                            Personaliza tu cuenta de perfil
-                            </label>
-                        </a>
-                    </div>
-                {% endif %}
-                <a href="{% url "profession" slug=user.profile.slug %}">
-                    <input class="form-check-input" type="checkbox" value="">
-                    <label class="form-check-label" for="flexCheckDefault">
-                    Crea tu primer repositorio
-                    </label>
-                </a>
-                <a href="{% url "profession" slug=user.profile.slug %}">
-                    <input class="form-check-input" type="checkbox" value="">
-                    <label class="form-check-label" for="flexCheckDefault">
-                    Registra a los autores de tu software.
-                    </label>
-                </a>
-            </div>
-        {% endblock content_2 %}
+        {% block subcontent %}
+        <p class="h4 text-secondary mt-5">Primeros pasos</p>
+        <ul class="">
+            <li class="list-group-item">
+                <div class="form-check mb-3">
+                    <a href="{% url "profession" slug=user.profile.slug %}">
+                        <input class="form-check-input" type="checkbox" value="">
+                        <label class="form-check-label text-dark" for="flexCheckDefault">
+                        Personaliza tu cuenta de perfil
+                        </label>
+                    </a>
+                </div>
+            </li>
+            <li class="list-group-item">
+                <div class="form-check mb-3">
+                    <a href="{% url "profession" slug=user.profile.slug %}">
+                        <input class="form-check-input" type="checkbox">
+                        <label class="form-check-label text-dark" for="flexCheckDefault">
+                        Crea tu primer registro de Software.
+                        </label>
+                    </a>
+                </div>
+            </li>
+        </ul>
+        {% endblock subcontent %}
     {% endif %}      
 {% endblock content %}
+
+{% block javascript %}
+<script>
+const check = ()=>{
+    alert('ckeck')
+}
+
+</script>
+{% endblock javascript %}
